--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,12 @@
   <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
   <dimen name="navigation_drawer_width">240dp</dimen>
+
+  <dimen name="margin_5">5dp</dimen>
+  <dimen name="margin_50">50dp</dimen>
+  <dimen name="margin_130">130dp</dimen>
+
+  <dimen name="textsize_12">12sp</dimen>
+  <dimen name="textsize_15">15sp</dimen>
+
 </resources>
