--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,5 +13,7 @@
 
   <dimen name="textsize_12">12sp</dimen>
   <dimen name="textsize_15">15sp</dimen>
+  <dimen name="app_bar_height">80dp</dimen>
+  <dimen name="fab_margin">16dp</dimen>
 
 </resources>
