--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,8 @@
       parent="Theme.AppCompat">
       <item name="colorPrimary">@color/material_blue_500</item>
       <item name="colorPrimaryDark">@color/material_blue_700</item>
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
     <!-- Customize your theme here. -->
   </style>
 
@@ -21,4 +23,6 @@
     <item name="android:textAllCaps">true</item>
   </style>
 
+  <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+  <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 </resources>
